modificaciones a index.html, le agrege un botton en el footer

--- a/catalogo/index.html
+++ b/catalogo/index.html
@@ -8,7 +8,9 @@
     <link rel="stylesheet" href="estilo.css">
 </head>
 <body>
-    <br>
+ 
+  
+  <br>
 
    
 
@@ -34,6 +36,8 @@
     <!-- Button trigger modal -->
     <i class="icofont-cart" data-bs-toggle="modal" data-bs-target="#staticBackdrop">
         <img src="img/cart.svg" alt="">
+
+  
     </i>
 
     <div class="datos-json"></div>
@@ -57,7 +61,7 @@
         </div>
       </div>
     </div>
-    
+
     <script>
 
 function createCard(jsonObject) {
@@ -196,6 +200,8 @@ let productos = 7;
 <footer>
   <div class="container">
     <div class="social-icons">
+      <button onclick="()=>{alert('hola')}">hola mundo</button>  
+    
       <a href="#"><img src="img/facebook.svg" alt="Facebook"></a>
       <a href="#"><img src="img/gorjeo.png" alt="Twitter"></a>
       <a href="#"><img src="img/instagram.png" alt="Instagram"></a>
